--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,23 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <!DCTYPE html>
 <html>
  <body>
    <h1>Editing Book</h1>
    <%= form_with model: @book do |f| %>
  <div>
+
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
     <h4>Title</h4>
     <%= f.text_field :title %>
  </div>
