--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -20,7 +20,9 @@
     </p>
     <p>印象を共有し交換することができます</p>
     <p>
-      <a href="/books">start</a>
+      <span>
+        <%= link_to "start", books_path %>
+      </span>
     </p>
  </body>
 </html>
